--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,4 +1,10 @@
+# add .xhtml
 DirectoryIndex index.php index.xhtml index.html
+
+# regulate hostname
+RewriteEngine on
+RewriteCond %{HTTP_HOST} !^kumarin\.co$
+RewriteRule ^.*$ - [F]
 
 # webfinger for mastodon WEB_DOMAIN
 RedirectMatch 301 ^/(\.well-known/webfinger.*)$ https://don.kumarin.co/$1
